git fix search by username
