# docs/swagger.yaml
@@ -581,6 +581,186 @@ paths:
           description: Internal Server Error
       tags:
       - User
+  /{org}/keto/check:
+    post:
+      consumes:
+      - application/json
+      description: Check tuple.
+      parameters:
+      - description: Organization
+        in: path
+        name: org
+        required: true
+        type: string
+      - description: body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/keto.Tuple'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
+      tags:
+      - Keto
+  /{org}/keto/checkbyusername:
+    post:
+      consumes:
+      - application/json
+      description: Check by username.
+      parameters:
+      - description: Organization
+        in: path
+        name: org
+        required: true
+        type: string
+      - description: body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/keto.Tuple'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
+      tags:
+      - Keto
+  /{org}/keto/create:
+    post:
+      consumes:
+      - application/json
+      description: Create tuple.
+      parameters:
+      - description: Organization
+        in: path
+        name: org
+        required: true
+        type: string
+      - description: body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/keto.Tuple'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
+      tags:
+      - Keto
+  /{org}/keto/delete:
+    post:
+      consumes:
+      - application/json
+      description: Delete tuple.
+      parameters:
+      - description: Organization
+        in: path
+        name: org
+        required: true
+        type: string
+      - description: body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/keto.Tuple'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
+      tags:
+      - Keto
+  /{org}/keto/list/object:
+    post:
+      consumes:
+      - application/json
+      description: Get objects.
+      parameters:
+      - description: Organization
+        in: path
+        name: org
+        required: true
+        type: string
+      - description: body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/keto.Tuple'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
+      tags:
+      - Keto
+  /{org}/keto/list/subject:
+    post:
+      consumes:
+      - application/json
+      description: Get subjects.
+      parameters:
+      - description: Organization
+        in: path
+        name: org
+        required: true
+        type: string
+      - description: body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/keto.Tuple'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+        "403":
+          description: Forbidden
+        "500":
+          description: Internal Server Error
+      tags:
+      - Keto
   /{resource_id}/permission:
     get:
       description: Get all resources.
@@ -723,186 +903,6 @@ paths:
           description: Internal Server Error
       tags:
       - Permission
-  /org/keto/check:
-    post:
-      consumes:
-      - application/json
-      description: Check tuple.
-      parameters:
-      - description: Organization
-        in: path
-        name: org
-        required: true
-        type: string
-      - description: body
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/keto.Tuple'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-        "400":
-          description: Bad Request
-        "403":
-          description: Forbidden
-        "500":
-          description: Internal Server Error
-      tags:
-      - Keto
-  /org/keto/checkbyusername:
-    post:
-      consumes:
-      - application/json
-      description: Check by username.
-      parameters:
-      - description: Organization
-        in: path
-        name: org
-        required: true
-        type: string
-      - description: body
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/keto.Tuple'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-        "400":
-          description: Bad Request
-        "403":
-          description: Forbidden
-        "500":
-          description: Internal Server Error
-      tags:
-      - Keto
-  /org/keto/create:
-    post:
-      consumes:
-      - application/json
-      description: Create tuple.
-      parameters:
-      - description: Organization
-        in: path
-        name: org
-        required: true
-        type: string
-      - description: body
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/keto.Tuple'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-        "400":
-          description: Bad Request
-        "403":
-          description: Forbidden
-        "500":
-          description: Internal Server Error
-      tags:
-      - Keto
-  /org/keto/delete:
-    post:
-      consumes:
-      - application/json
-      description: Delete tuple.
-      parameters:
-      - description: Organization
-        in: path
-        name: org
-        required: true
-        type: string
-      - description: body
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/keto.Tuple'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-        "400":
-          description: Bad Request
-        "403":
-          description: Forbidden
-        "500":
-          description: Internal Server Error
-      tags:
-      - Keto
-  /org/keto/list/object:
-    post:
-      consumes:
-      - application/json
-      description: Get objects.
-      parameters:
-      - description: Organization
-        in: path
-        name: org
-        required: true
-        type: string
-      - description: body
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/keto.Tuple'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-        "400":
-          description: Bad Request
-        "403":
-          description: Forbidden
-        "500":
-          description: Internal Server Error
-      tags:
-      - Keto
-  /org/keto/list/subject:
-    post:
-      consumes:
-      - application/json
-      description: Get subjects.
-      parameters:
-      - description: Organization
-        in: path
-        name: org
-        required: true
-        type: string
-      - description: body
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/keto.Tuple'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-        "400":
-          description: Bad Request
-        "403":
-          description: Forbidden
-        "500":
-          description: Internal Server Error
-      tags:
-      - Keto
   /organization:
     get:
       description: Get all organizations.
